--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LinaZhukov/gantri-challenge#readme",
   "dependencies": {
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "pg": "^8.10.0"
   }
