--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gantri-challenge",
   "version": "1.0.0",
   "description": "Backend Project",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
