--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/LinaZhukov/gantri-challenge#readme",
   "dependencies": {
+    "chai": "^4.3.7",
     "config": "^3.3.9",
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "mocha": "^10.2.0",
+    "pg": "^8.10.0",
+    "supertest": "^6.3.3"
   }
 }
