--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.3.7",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "mocha": "^10.2.0",
     "pg": "^8.10.0",
     "supertest": "^6.3.3"
