--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LinaZhukov/gantri-challenge#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "chai": "^4.3.7",
     "config": "^3.3.9",
     "express": "^4.18.2",
