--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@
 version: "3"
 services:
   app:
-    restart: on-failure
     build: .
     depends_on:
       - postgres
     environment:
       DATABASE_URL: postgres://user:pass@postgres:5432/db
-      NODE_ENV: development
       PORT: 3000
     ports:
       - "3000:3000"
-    command: npm run dev
+    command: node src/server.js
     volumes:
       - .:/app/
       - /app/node_modules
