--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "gantri-challenge",
   "version": "1.0.0",
   "description": "Backend Project",
-  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LinaZhukov/gantri-challenge.git"
   },
-  "author": "",
+  "author": "zhukovl@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/LinaZhukov/gantri-challenge/issues"
