--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.15.0",
     "mocha": "^10.2.0",
     "pg": "^8.10.0",
+    "postgrator": "^7.1.1",
     "supertest": "^6.3.3"
   }
 }
