--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: "3"
 services:
   app:
@@ -6,8 +5,9 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://postgres:password@postgres:5432/postgres
       PORT: 3000
+      PGHOST: postgres
+      PGUSER: postgres
     ports:
       - "3000:3000"
     command: npm run start
@@ -23,3 +23,5 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: postgres
+    volumes:
+      - ./app/docs
