--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     depends_on:
       - postgres
+      - redis
     environment:
       PORT: 3000
       PGHOST: postgres
@@ -25,3 +26,8 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - ./docs:/app/docs
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
