--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mocha": "^10.2.0",
     "pg": "^8.10.0",
     "postgrator": "5.0.1",
+    "redis": "^4.6.5",
     "supertest": "^6.3.3"
   }
 }
