--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,6 @@ services:
       - ./docs:/app/docs
 
   redis:
-    image: redis
+    image: redis/redis-stack-server
     ports:
       - "6379:6379"
