added redis-om for rediSearch backed searching

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.10.0",
     "postgrator": "5.0.1",
     "redis": "^4.6.5",
+    "redis-om": "^0.3.6",
     "supertest": "^6.3.3"
   }
 }
